style: style the button and fix the spacing between elements

--- a/protect-routes/static/css/login.css
+++ b/protect-routes/static/css/login.css
@@ -49,9 +49,7 @@ form {
 }
 
 form div {
-    	margin-bottom: 15px;
-	margin-left: auto;
-	margin-right: auto;
+    	margin: 8px auto;
 }
 
 input[type="text"],
@@ -62,4 +60,21 @@ input[type="password"] {
     	border: none;
     	border-radius: 4px;
 	border: 1px solid #ccc;
+}
+
+input[type="submit"] {
+	padding: 8px 20px;
+	color: #FFF;
+	background-color: #0598ce;
+	cursor: pointer;
+	border: none;
+	border-radius: 8px;
+}
+
+input[type="submit"]:hover {
+	background-color: blue;
+}
+
+.button-container {
+	margin: 0 auto;
 }
